--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   </head>
   <body>
     <div id="card">
-      <img id="mountain" src="mountain.png" alt="Mountain at sunset" />
-      <div id="main-content">
-        <h1>An Above Average Experience</h1>
-        <p>
-          Travel to the premiere mountain tops of New Zealand with our guided
-          tours. Take in the majestic scenary and witness beauty.
-        </p>
-        <img id="link-icon" src="link.svg" alt="Outer link icon" />
-      </div>
+      <a href="#">
+        <img id="mountain" src="mountain.png" alt="Mountain at sunset" />
+        <div id="main-content">
+          <h1>An Above Average Experience</h1>
+          <p>
+            Travel to the premiere mountain tops of New Zealand with our guided
+            tours. Take in the majestic scenary and witness beauty.
+          </p>
+          <img id="link-icon" src="link.svg" alt="Outer link icon" />
+        </div>
+      </a>
     </div>
   </body>
 </html>
